correct misc data

--- a/repo.cfg
+++ b/repo.cfg
@@ -1,7 +1,7 @@
 // repo name
 name	= "CP Master Repo"
 // repo url
-url	= "https://github.com/chrysalis-repos/head.cpe"
+url	= "https://haneefmubarak@github.com/haneefmubarak/chrysalis-repos.git"
 // package types (regex): binary (b) source (s) and meta (m)
 ptypes	= "(b|s|m)"
 
@@ -17,5 +17,6 @@ keys = {
 	k0 = {
 		name:	"Haneef Mubarak"
 		key:	"0x3D82F3C955A42BEBA279FC3403983322F08280A4"
+		valid:	"2014"
 	}
 }
